# gpu-top

./: .gitignore  DEPLOY.md  Dockerfile  NIXOS_DEPLOY.md  README.md  deploy.sh  docker-compose.example.yml  flake.nix  pyproject.toml
dev/: agent-dev.toml  fake-nvidia-smi  ldap-compose.yml  nvidia-smi  seed.ldif  server-dev.toml
examples/: Caddyfile  agent.toml  docker-compose.zver0.yml  server-ipg.toml  server.toml
src/gpu_top/: __init__.py  __main__.py  collector.py  config.py  tui.py
src/gpu_top/agent/: __init__.py
src/gpu_top/server/: __init__.py  api.py  app.py  auth.py  db.py  ingest.py
tests/: test_app.py  test_auth.py  test_collector.py  test_config.py  test_db.py  test_ingest.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: site.webmanifest
web/src/: App.jsx  api.js  main.jsx  styles.css
web/src/components/: ClusterView.jsx  Dashboard.jsx  Gauge.jsx  GpuCard.jsx  LoginPage.jsx  MultiSparkline.jsx  ProcessTable.jsx  ServerFilter.jsx  ServerSection.jsx  Sparkline.jsx  StaleBadge.jsx  WindowPicker.jsx
web/src/hooks/: useCluster.js  useHistory.js  usePolling.js
